SSBD202302-283 Created method responsible for generating refresh token.